<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_habit"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_habit" />

    <item
        android:id="@+id/navigation_journal"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_journal" />

    <item
        android:id="@+id/navigation_mood"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/title_mood" />
    <item
        android:id="@+id/navigation_blog"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_blog" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile"
        android:visible="false" />

</menu>
